# despatcher-gui

./: CMakeLists.txt  README.md  despatcher-gui.desktop  despatcher-gui.pro  despatcher-gui.xpm  despatcher_gui.cpp  despatcher_gui.h  despatcher_gui.ui  main.cpp  simple.cpp
